--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,6 +5,6 @@
     app:startDestination="@id/productFragment">
     <fragment
         android:id="@+id/productFragment"
-        android:name="com.eahm.feature.product.management.ProductFragment"
+        android:name="com.eahm.feature.product.management.ui.ProductFragment"
         android:label="ProductFragment" />
 </navigation>
